Fixed inflation problem in multiple buy, fix snow weather image, shift + a tend to all, double shift for quick info, fixed import, no cursor tend on locked, market exchanges don't allow same, show when task completed, fixed frost error

--- a/styles.css
+++ b/styles.css
@@ -182,25 +182,27 @@ Farmland & Plots
 
 /* Buttons */
 .btn {
-   font-size: 3vh;
-   height: 10vh;
-   width: 25vh;
-   transition: .2s;
-   border-radius: 1vh;
-   border: solid .4vh rgb(0, 0, 0, .2);
-   background-color: #ffd700;
+   font-size: 2.8vh;
+   height: 20vh;
+   width: 20vh;
+   transition: .3s;
+   border-radius: 50%;
+   border: solid .5vh rgb(100, 149, 237, .3);
+   background: none;
+   backdrop-filter: blur(.4vh);
+   box-shadow: inset -1vh 1vh 2.5vh rgb(255, 255, 255, .25);
    font-family: "Roboto Condensed";
-   padding: 0;
-   color: #343cb9;
+   padding: .2vh;
+   color: #fff;
    font-weight: 600;
+   letter-spacing: .06ch;
    pointer-events: auto;
    opacity: 1;
 }
 .btn:hover {
    transform: translateY(-1vh) scale(1.05);
-   box-shadow: 0 1.5vh 2vh #262626;
-   animation: bob 1.8s infinite;
-   animation-delay: .5s;
+   box-shadow: inset -1vh -1vh 2.5vh rgb(255, 255, 255, .25),
+               0 .5vh 1vh #4b3200;
 }
 .veg-icon {
    height: 8vh;
@@ -211,18 +213,13 @@ Farmland & Plots
 .purchase-plot {
    padding: 2vh;
    margin: 0;
-   background-color: #272727;
-   border: solid .4vh #808080;
+   background-color: #533805;
+   border: solid .4vh #ba7900;
    border-radius: .4vh;
    color: #fff;
    transition: 0.5s;
 }
 .purchase-plot:hover { box-shadow: 0 0 2vh #f5f5f5; }
-@keyframes bob {
-   0% { transform: translateY(-1vh) scale(1.05); box-shadow: 0 1.5vh 2vh #262626; }
-   50% { transform: translateY(.4px) scale(1.05); box-shadow: 0 .8vh 2vh #262626; }
-   100% { transform: translateY(-5px) scale(1.05); box-shadow: 0 1.5vh 2vh #262626; }
-}
 
 /* Locks */
 .locked { height: 18vh; }
@@ -230,29 +227,21 @@ Farmland & Plots
    position: relative;
    font-family: "Nunito", sans-serif;
 }
-.lock-tooltip .tooltiptext::after {
-   content: "";
-   position: absolute;
-   top: 50%;
-   right: 100%;
-   margin-top: -1.5vh;
-   border-width: 1.5vh;
-   border-style: outset;
-   border-color: transparent lightblue transparent transparent;
-}
 .lock-tooltip .tooltiptext {
-   padding: 20vh 5vh;
-   background-color: #606060;
-   color: #fff;
-   border-radius: .6vh;
    position: absolute;
-   padding: 2vh 2vh;
-   width: 25vh;
-   min-height: 75%;
-   left: 102%;
-   font-size: 3vh;
+   top: -25%;
+   bottom: 0;
+   left: 115%;
+   width: 30vh;
+   height: 150%;
+   padding: 2.5vh;
+   background-color: #ffc04b;
+   color: #5e3d00;
+   border-radius: 2vh;
+   font-size: 2.8vh;
    text-align: center;
-   border: outset .5vh lightblue;
+   border: outset 1vh #faa911;
+   box-sizing: border-box;
    z-index: 1;
    opacity: 0;
    pointer-events: none;
@@ -411,6 +400,19 @@ Right Click Menu
 #menu hr {
    border: .25vh solid #ebebeb;
    border-bottom: 0;
+}
+
+.qIM {
+   position: fixed;
+   z-index: 9999;
+   display: none;
+   font-family: Nunito;
+   font-size: 3vh;
+   background: #fff;
+   color: #555;
+   border-radius: 1vh;
+   box-shadow: 0 0 1vh #f5f5f5;
+   padding: 5vh;
 }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -1584,3 +1586,24 @@ tr:nth-child(even) { background-color: #eee; }
    opacity: 1;
    pointer-events: auto;
 }
+
+.aTaskIsReady {
+   height: 10vh;
+   position: absolute;
+   top: 8vh;
+   right: -78vh;
+   z-index: 1000000;
+   transition: .5s;
+   opacity: 0;
+   pointer-events: none;
+}
+
+#layer2 { opacity: 0; animation: shownhide1 2s infinite; }
+#layer3 { opacity: 0; animation: shownhide2 2s infinite; }
+#layer4 { opacity: 0; animation: shownhide3 2s infinite; }
+#layer5 { opacity: 0; animation: shownhide4 2s infinite; }
+
+@keyframes shownhide1 { 0% { opacity: .5; } 7% { opacity: 1; } 14% { opacity: .5; } 21% { opacity: 0; } 28% { opacity: 0; } 35% { opacity: 0; } 42% { opacity: 0; } 49% { opacity: 0; } 56% { opacity: 0; } 63% { opacity: 0; } 70% { opacity: 0; } 77% { opacity: 0; } 84% { opacity: .5; } 91% { opacity: 1; } 100% { opacity: .5; } }
+@keyframes shownhide2 { 0% { opacity: 0; } 7% { opacity: 0; } 14% { opacity: .5; } 21% { opacity: 1; } 28% { opacity: .5; } 35% { opacity: 0; } 42% { opacity: 0; } 49% { opacity: 0; } 56% { opacity: 0; } 63% { opacity: 0; } 70% { opacity: 0; } 77% { opacity: 1; } 84% { opacity: 0; } 91% { opacity: 0; } 100% { opacity: 0; } }
+@keyframes shownhide3 { 0% { opacity: 0; } 7% { opacity: 0; } 14% { opacity: 0; } 21% { opacity: 0; } 28% { opacity: .5; } 35% { opacity: 1; } 42% { opacity: .5; } 49% { opacity: 0; } 56% { opacity: .5; } 63% { opacity: 1; } 70% { opacity: .5; } 77% { opacity: 0; } 84% { opacity: 0; } 91% { opacity: 0; } 100% { opacity: 0; } }
+@keyframes shownhide4 { 0% { opacity: 0; } 7% { opacity: 0; } 14% { opacity: 0; } 21% { opacity: 0; } 28% { opacity: 0; } 35% { opacity: 0; } 42% { opacity: .5; } 49% { opacity: 1; } 56% { opacity: .5; } 63% { opacity: 0; } 70% { opacity: 0; } 77% { opacity: 0; } 84% { opacity: 0; } 91% { opacity: 0; } 100% { opacity: 0; } }
